--- a/kanban.org
+++ b/kanban.org
@@ -61,16 +61,27 @@ rails new my_app --skip-webpack-install --skip-javascript -d <database_you_want>
 
 * Jira Tickets
 ** Todo
-*** TODO Check Vue.js docs page
-<2023-04-11 Tue 19:39>: I need to check Vue.js docs page for some refreshers on its use so that I can figure out how to implement the basic page I want for this application.
 *** TODO Watch related intro videos on Vue.js for refresher purposes
 <2023-04-12 Wed 21:12>: I'm in the process of watching a few Vue.js tutorials just to get a feel for it so far.
 
 From the looks of it, it seems just like React where it is its own self contained framework where you can build out repeatable components easily. The interpolation aspect seems very similar to React, and also the whole idea of binding to a div tag for the entire application itself is just like React as well.
 
+*** TODO Check Vue.js docs page
+<2023-04-11 Tue 19:39>: I need to check Vue.js docs page for some refreshers on its use so that I can figure out how to implement the basic page I want for this application.
 *** TODO Work on Figma wireframe for application
 <2023-04-11 Tue 19:40>: I would like to revisit some basic Figma tutorials to get a good wireframe going for the application itself so I can plan out its features.
 ** In Progress
+*** IN-PROGRESS Ensure that the actual Vue.js related template actually installed Vue.js components
+<2023-04-12 Wed 22:02>: Based on watching a few refresher videos on Vue.js, I realized that the template I'm using might not even be installing Vue.js correctly.
+
+I went through the related process a few times but still noticed that only the '' directory contains anything Vue.js related.
+
+I don't see any major 'package.json' manifest file for the project itself.
+
+Here is the related GitHub issues bug I opened up for that template itself:
+- https://github.com/IsraelDCastro/rails-vite-tailwindcss-template/issues/13
+
+I might go ahead and just try with a basic Vue.js app going forward to be honest since this is really just a 3-part timer application anyway. I will think about this and debate this honestly.
 ** Completed
 *** DONE Git clone related 'Rails + Vue + Vite' template from GitHub and get it running locally
 <2023-04-10 Mon 19:35>: I need to follow the instructions present within the related GitHub page:
